--- a/layouts/potreroDigital_proyecto_grupo17_ENTRETENIMIENTO.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_ENTRETENIMIENTO.HTML
@@ -78,127 +78,141 @@
 
 <main class=" row align-items-center justify-content-center">
 <div class="card" style="width: 18rem;">
-            <img src="" class="card-img-top" alt="...">
+            <img src="IMAGENES/entretenimiento/noticia1.jpg" height="190px" class="card-img-top" alt="...">
             <div class="card-body">
-              <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+              <a href="noticiaent1.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Con Disney + llegan los superhéroes del entretenimiento">
+                Con Disney + llegan los superhéroes del entretenimiento
+
               </button></h1> </a>
-            <p class="card-text"></p>
-            <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+            <p class="card-text">No es descabellado imaginar que en el futuro, cuando los  </p>
+            <a href="noticiaent1.html" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
 
       </div>
           <div class="card" style="width: 18rem;">
-          <img src="" class="card-img-top" alt="...">
+          <img src="IMAGENES/entretenimiento/noticia2.jpg" height="190px" class="card-img-top" alt="...">
           <div class="card-body">
-            <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+            <a href="noticiaent2.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="American Music Awards 2020: Esta es la lista de ganadores">
+              American Music Awards 2020: Esta es la lista de ganadores
             </button></h1></a>
 
-          <p class="card-text"><br></p>
-          <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+          <p class="">Taylor Swift ganó su tercer galardón consecutivo<br></p>
+          <a href="noticiaent2.html" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
 
       </div>
           <div class="card" style="width: 18rem;">
-          <img src="" class="card-img-top" alt="...">
+          <img src="IMAGENES/entretenimiento/noticia3.jpg" height="190px" class="card-img-top" alt="...">
           <div class="card-body">
-            <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+            <a href="noticiaent3.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="El entretenimiento va abriendo puertas de forma tímida">
+              El entretenimiento va abriendo puertas de forma tímida
             </button></h1> </a>
-          <p class="card-text"></p>
-          <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+          <p class="card-text">El gobierno ha iniciado una desescalada </p>
+          <a href="noticiaent3.html" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
 
       </div>
           <div class="card" style="width: 18rem;">
-          <img src="" class="card-img-top" alt="...">
+          <img src="IMAGENES/entretenimiento/noticia4.jpg" height="190px" class="card-img-top" alt="...">
           <div class="card-body">
-            <a href=""><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+            <a href="noticiaent4.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Bad Bunny dio positivo para COVID-19">
+              Bad Bunny dio positivo para COVID-19
             </button></h1></a>
-          <p class="card-text">"</p>
-          <a href="" class="btn btn-outline-primary btn-block ">Ver mas</a>
+          <p class="card-text">Inicialmente, estaba previsto que Bad Bunny interpretara</p>
+          <a href="noticiaent4.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
       </div>
 
     </div>
 
     <div class="card" style="width: 18rem;">
-                <img src="" class="card-img-top" alt="...">
+                <img src="IMAGENES/entretenimiento/noticia5.jpg" height="190px" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                  <a href="noticiaent5.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Phasmophobia, otro videojuego éxito del 2020, se convirtió en un referente del futuro del entretenimiento">
+                    Phasmophobia, otro videojuego éxito del 2020, se convirtió en un referente del futuro del entretenimiento
                   </button></h1> </a>
-                <p class="card-text"></p>
-                <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+                <p class="card-text">El juego de terror psicológico cuenta con</p>
+                <a href="noticiaent5.html" class="btn btn-outline-primary btn-block">Ver mas</a>
           </div>
 
           </div>
               <div class="card" style="width: 18rem;">
-              <img src="" class="card-img-top" alt="...">
+              <img src="IMAGENES/entretenimiento/noticia6.jpg" height="190px" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                <a href="noticiaent6.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="El actor Lukas Gage de “Euphoria” descubrió a un director burlándose de él en Zoom: el video se viralizó y Hollywood salió a apoyarlo">
+                  El actor Lukas Gage de “Euphoria” descubrió a un director burlándose de él en Zoom: el video se viralizó y Hollywood salió a apoyarlo
                 </button></h1></a>
 
-              <p class="card-text"><br></p>
-              <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+              <p class="card-text">Lukas Gage tiene un recordatorio para todos</p>
+              <a href="noticiaent6.html" class="btn btn-outline-primary btn-block">Ver mas</a>
           </div>
 
           </div>
               <div class="card" style="width: 18rem;">
-              <img src="" class="card-img-top" alt="...">
+              <img src="IMAGENES/entretenimiento/noticia7.jpg" height="190px" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                <a href="noticiaent7.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Un nuevo polo de entretenimiento y gastronomía para el verano marplatense">
+                  Un nuevo polo de entretenimiento y gastronomía para el verano marplatense
                 </button></h1> </a>
-              <p class="card-text"></p>
-              <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+              <p class="card-text">Además de la tradicional oferta de sus restaurantes</p>
+              <a href="noticiaent7.html" class="btn btn-outline-primary btn-block">Ver mas</a>
           </div>
 
           </div>
               <div class="card" style="width: 18rem;">
-              <img src="" class="card-img-top" alt="...">
+              <img src="IMAGENES/entretenimiento/noticia8.jpg" height="190px" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href=""><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                <a href="noticiaent8.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Estos son los streamers de Twitch mejor pagados del mundo">
+                  Estos son los streamers de Twitch mejor pagados del mundo
                 </button></h1></a>
-              <p class="card-text">"</p>
-              <a href="" class="btn btn-outline-primary btn-block ">Ver mas</a>
+              <p class="card-text">De los streamers de habla hispana, el mejor pagado de </p>
+              <a href="noticiaent8.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
           </div>
 
         </div>
 
         <div class="card" style="width: 18rem;">
-                    <img src="" class="card-img-top" alt="...">
+                    <img src="IMAGENES/entretenimiento/noticia9.jpg" height="190px" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                      <a href="noticiaent9.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Las fotos de Shakira que están causando controversia">
+                        Las fotos de Shakira que están causando controversia
                       </button></h1> </a>
-                    <p class="card-text"></p>
-                    <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+                    <p class="card-text">Mucha polémica se ha armado recientemente en torno a </p>
+                    <a href="noticiaent9.html" class="btn btn-outline-primary btn-block">Ver mas</a>
               </div>
 
               </div>
                   <div class="card" style="width: 18rem;">
-                  <img src="" class="card-img-top" alt="...">
+                  <img src="IMAGENES/entretenimiento/noticia10.jpg" height="190px" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                    <a href="noticiaent10.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="“Para mí es un desconocido” y “Desgraciado”: Violeta Isfel y Laura Bozzo se sumaron a las condenas contra la violencia ejercida por Eleazar “N”">
+                      “Para mí es un desconocido” y “Desgraciado”: Violeta Isfel y Laura Bozzo se sumaron a las condenas contra la violencia ejercida por Eleazar “N”
+
                     </button></h1></a>
 
-                  <p class="card-text"><br></p>
-                  <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+                  <p class="card-text">En torno al caso de Eleazar “N” se han pronunciado algunos</p>
+                  <a href="noticiaent10.html" class="btn btn-outline-primary btn-block">Ver mas</a>
               </div>
 
               </div>
                   <div class="card" style="width: 18rem;">
-                  <img src="" class="card-img-top" alt="...">
+                  <img src="IMAGENES/entretenimiento/noticia11.jpg" height="190px" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                    <a href="noticiaent11.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Cómo será ir al teatro esta temporada: el protocolo para un entretenimiento seguro">
+                      Cómo será ir al teatro esta temporada: el protocolo para un entretenimiento seguro
                     </button></h1> </a>
-                  <p class="card-text"></p>
-                  <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+                  <p class="card-text">El protocolo, volcado en un documento de más de 50 </p>
+                  <a href="noticiaent.html" class="btn btn-outline-primary btn-block">Ver mas</a>
               </div>
 
               </div>
                   <div class="card" style="width: 18rem;">
-                  <img src="" class="card-img-top" alt="...">
+                  <img src="IMAGENES/entretenimiento/noticia12.jpg" height="190px" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <a href=""><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                    <a href="noticiaent12.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="El excéntrico look de Wanda Nara para andar a caballo, su nuevo entretenimiento en París">
+                      El excéntrico look de Wanda Nara para andar a caballo, su nuevo entretenimiento en París
                     </button></h1></a>
-                  <p class="card-text">"</p>
-                  <a href="" class="btn btn-outline-primary btn-block ">Ver mas</a>
+                  <p class="card-text">Wanda Nara dejó Italia y se instaló en Francia</p>
+                  <a href="noticiaent12.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
               </div>
 
             </div>
