--- a/layouts/potreroDigital_proyecto_grupo17_DEPORTES.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_DEPORTES.HTML
@@ -77,127 +77,138 @@
 
 <main class=" row align-items-center justify-content-center">
 <div class="card" style="width: 18rem;">
-            <img src="" class="card-img-top" alt="...">
+            <img src="IMAGENES/DEPORTES/NOTICIA1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
-              </button></h1> </a>
-            <p class="card-text"></p>
-            <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+              <a href="NOTICIAdep1.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="La provincia puso en funcionamiento los consejos locales y departamentales del deporte.">
+              </button>La provincia puso en funcionamiento los consejos locales y departamentales del deporte.</h1> </a>
+            <p class="card-text">Se conformaron los consejos locales y departamentales.</p>
+            <a href="NOTICIAdep1.html" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
 
       </div>
           <div class="card" style="width: 18rem;">
-          <img src="" class="card-img-top" alt="...">
+          <img src="IMAGENES/DEPORTES/NOTICIA2.jpg" height="190px"class="card-img-top" alt="...">
           <div class="card-body">
-            <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+            <a href="NOTICIAdep2.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="La provincia participa del Pimer Torneo Virtual/ Presencial de Básquet. La actividad es pionera en su estilo y cumple con todos los protocolos sanitarios establecidos.">
+              La provincia participa del Pimer Torneo Virtual
             </button></h1></a>
 
-          <p class="card-text"><br></p>
-          <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+          <p class="card-text">El Ministerio de Desarrollo Social de la provincia, a través.<br></p>
+          <a href="NOTICIAdep2.html" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
 
       </div>
           <div class="card" style="width: 18rem;">
-          <img src="" class="card-img-top" alt="...">
+          <img src="IMAGENES/DEPORTES/NOTICIA3.JPG" height="190PX"class="card-img-top" alt="...">
           <div class="card-body">
-            <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+            <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Marcelo Gallardo realizó un profundo análisis sobre el fútbol argentino: “Se están viendo partidos feos en un contexto feo”">
+              Marcelo Gallardo realizó un profundo análisis sobre el fútbol argentino: “Se están viendo partidos feos en un contexto feo”
             </button></h1> </a>
-          <p class="card-text"></p>
-          <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+          <p class="card-text">El entrenador de River Plate no confirmó </p>
+          <a href="NOTICIAdep3.html" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
 
       </div>
           <div class="card" style="width: 18rem;">
-          <img src="" class="card-img-top" alt="...">
+          <img src="IMAGENES/DEPORTES/NOTICIA4.JPG" class="card-img-top" alt="...">
           <div class="card-body">
-            <a href=""><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+            <a href="NOTICIAdep4.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Antoine Griezmann rompe el silencio: “Es hora de poner las cosas en su sitio”">
+              Antoine Griezmann rompe el silencio: “Es hora de poner las cosas en su sitio”
             </button></h1></a>
-          <p class="card-text">"</p>
-          <a href="" class="btn btn-outline-primary btn-block ">Ver mas</a>
+          <p class="card-text">Después de verse involucrado en una polémica de su ex</p>
+          <a href="NOTICIAdep4.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
       </div>
 
     </div>
 
     <div class="card" style="width: 18rem;">
-                <img src="" class="card-img-top" alt="...">
+                <img src="IMAGENES/DEPORTES/NOTICIA5.JPG" height="190PX" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                  <a href="NOTICIAdep5.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Messi no viaja a Kiev: la razón por la que no fue convocado para el próximo partido">
+                    Messi no viaja a Kiev: la razón por la que no fue convocado para el próximo partido
                   </button></h1> </a>
-                <p class="card-text"></p>
-                <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+                <p class="card-text">El argentino quedó afuera de la nómina de futbolistas que</p>
+                <a href="NOTICIAdep5.html" class="btn btn-outline-primary btn-block">Ver mas</a>
           </div>
 
           </div>
               <div class="card" style="width: 18rem;">
-              <img src="" class="card-img-top" alt="...">
+              <img src="IMAGENES/DEPORTES/NOTICIA6.JPG" height="190PX" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                <a href="NOTICIAdep5.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Quién es Stefany Gabriela De La Cruz Arcosa, la hermana del futbolista de River detenida con más de 40 kilos de cocaína">
+                  Quién es Stefany Gabriela De La Cruz Arcosa, la hermana del futbolista de River detenida con más de 40 kilos de cocaína
                 </button></h1></a>
 
-              <p class="card-text"><br></p>
-              <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+              <p class="card-text">La joven de 26 años es uno de los diez hijos que tuvo <br></p>
+              <a href="NOTICIAdep6.html" class="btn btn-outline-primary btn-block">Ver mas</a>
           </div>
 
           </div>
               <div class="card" style="width: 18rem;">
-              <img src="" class="card-img-top" alt="...">
+              <img src="IMAGENES/DEPORTES/NOTICIA7.JPG" height="190PX" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                <a href="NOTICIAdep7.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="El Club Atlético Adelante Reconquista inauguró la pileta climatizada.">
+                  El Club Atlético Adelante Reconquista inauguró la pileta climatizada.
                 </button></h1> </a>
-              <p class="card-text"></p>
-              <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+              <p class="card-text">Momentos de profunda emoción se vivieron en sector</p>
+              <a href="NOTICIAdep7.html" class="btn btn-outline-primary btn-block">Ver mas</a>
           </div>
 
           </div>
               <div class="card" style="width: 18rem;">
-              <img src="" class="card-img-top" alt="...">
+              <img src="IMAGENES/DEPORTES/NOTICIA8.JPG" height="190PX"  class="card-img-top" alt="...">
               <div class="card-body">
-                <a href=""><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                <a href="NOTICIAdep8.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Funcionarios municipales se reunieron con representantes de instituciones deportivas y gimnasios de Reconquista.">
+                  Funcionarios municipales se reunieron con representantes de instituciones deportivas y gimnasios de Reconquista.
                 </button></h1></a>
-              <p class="card-text">"</p>
-              <a href="" class="btn btn-outline-primary btn-block ">Ver mas</a>
+              <p class="card-text">El Secretario de Control Público Lic. Nicolás Sandrigo</p>
+              <a href="NOTICIAdep8.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
           </div>
 
         </div>
 
         <div class="card" style="width: 18rem;">
-                    <img src="" class="card-img-top" alt="...">
+                    <img src="IMAGENES/DEPORTES/NOTICIA9.JPG" height="190PX" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                      <a href="NOTICIAdep9.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="La provincia extendió la inscripción al programa Aportes al Deporte Comunitario.">
+                        La provincia extendió la inscripción al programa Aportes al Deporte Comunitario.
                       </button></h1> </a>
-                    <p class="card-text"></p>
-                    <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+                    <p class="card-text">El Ministerio de Desarrollo Social, a través de la Secretaría</p>
+                    <a href="NOTICIAdep9.html" class="btn btn-outline-primary btn-block">Ver mas</a>
               </div>
 
               </div>
                   <div class="card" style="width: 18rem;">
-                  <img src="" class="card-img-top" alt="...">
+                  <img src="IMAGENES/DEPORTES/NOTICIA10.JPG" height="190PX" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                    <a href="NOTICIAdep10.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Con Pole Position y doble podio, el piloto de Reconquista Giuliano Pereson se lució en Buenos Aires.">
+                      Con Pole Position y doble podio, el piloto de Reconquista Giuliano Pereson se lució en Buenos Aires.
                     </button></h1></a>
 
-                  <p class="card-text"><br></p>
-                  <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+                  <p class="card-text">El Evento #2 de Iame Series Argentina se llevó a cabo en el<br></p>
+                  <a href="NOTICIAdep10.html" class="btn btn-outline-primary btn-block">Ver mas</a>
               </div>
 
               </div>
                   <div class="card" style="width: 18rem;">
-                  <img src="" class="card-img-top" alt="...">
+                  <img src="IMAGENES/DEPORTES/NOTICIA11.JPG" height="190PX" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                    <a href="NOTICIAdep11.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Ángel David Comizzo nuevamente campeón en Perú.">
+                      Ángel David Comizzo nuevamente campeón en Perú.
                     </button></h1> </a>
-                  <p class="card-text"></p>
-                  <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+                  <p class="card-text">Angel David Comizzo en la dirección técnica del</p>
+                  <a href="NOTICIAdep11.html" class="btn btn-outline-primary btn-block">Ver mas</a>
               </div>
 
               </div>
                   <div class="card" style="width: 18rem;">
-                  <img src="" class="card-img-top" alt="...">
+                  <img src="IMAGENES/DEPORTES/NOTICIA12.JPG" height="190PX"  class="card-img-top" alt="...">
                   <div class="card-body">
-                    <a href=""><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                    <a href="NOTICIAdep12.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Alfredo Segado está entre los mejores. Clasificó a la Final del Campeonato Argentino Sub 2300.">
+                      Alfredo Segado está entre los mejores. Clasificó a la Final del Campeonato Argentino Sub 2300.
                     </button></h1></a>
                   <p class="card-text">"</p>
-                  <a href="" class="btn btn-outline-primary btn-block ">Ver mas</a>
+                  <a href="NOTICIAdep12.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
               </div>
 
             </div>
@@ -246,7 +257,7 @@
 
 
   <div class="footer-copyright text-center py-3">© 2020 Copyright:MIALNOTICIAS
-    <a href="PROYEC.HTML"> MIALNOTICAS</a>
+    <a href="potreroDigital_proyecto_grupo17_PROYEC.html"> MIALNOTICAS</a>
   </div>
 
 
